[package]
name = "toji"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.6.0"
alloy-rlp = { version = "0.3.4", features = ["derive"] }
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env"] }
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
